// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuestsList Component should handle an onScroll event: scroll event 1`] = `
Array [
  Array [
    Object {
      "target": Object {
        "clientHeight": 100,
        "scrollHeight": 200,
        "scrollTop": 100,
      },
    },
  ],
]
`;

exports[`GuestsList Component should handle multiple display states: fulfilled 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "84px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-guests-list"
        columnHeaders={
          Array [
            "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
            "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
          ]
        }
        isHeader={true}
        rows={
          Array [
            Object {
              "cells": Array [
                "ipsum",
                "sit",
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle multiple display states: initial pending 1`] = `
<div
  className="fadein "
>
  <Loader
    skeletonProps={
      Object {
        "size": "sm",
      }
    }
    tableProps={
      Object {
        "borders": false,
        "className": "curiosity-guests-list",
        "colCount": 1,
        "colWidth": Array [],
        "rowCount": 1,
        "variant": "compact",
      }
    }
    variant="table"
  />
</div>
`;

exports[`GuestsList Component should handle variations in data: filtered data 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "126px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-guests-list"
        columnHeaders={
          Array [
            Object {
              "title": "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
              "transforms": Array [
                [Function],
              ],
            },
          ]
        }
        isHeader={true}
        rows={
          Array [
            Object {
              "cells": Array [
                Object {
                  "title": "ipsum",
                },
              ],
            },
            Object {
              "cells": Array [
                Object {
                  "title": "amet",
                },
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should handle variations in data: variable data 1`] = `
<div
  className="fadein "
>
  <div
    className="curiosity-table-scroll"
    style={
      Object {
        "height": "126px",
      }
    }
  >
    <div
      className="curiosity-table-scroll-list__no-scroll"
      onScroll={[Function]}
    >
      <Table
        ariaLabel={null}
        borders={false}
        className="curiosity-guests-list"
        columnHeaders={
          Array [
            "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
            "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
          ]
        }
        isHeader={true}
        rows={
          Array [
            Object {
              "cells": Array [
                "ipsum",
                "sit",
              ],
            },
            Object {
              "cells": Array [
                "amet",
                "amet",
              ],
            },
          ]
        }
        summary={null}
        t={[Function]}
        variant="compact"
      />
    </div>
  </div>
</div>
`;

exports[`GuestsList Component should render a basic component: basic render 1`] = `
<div
  className="fadein "
>
  <Loader
    skeletonProps={
      Object {
        "size": "sm",
      }
    }
    tableProps={
      Object {
        "borders": false,
        "className": "curiosity-guests-list",
        "colCount": 1,
        "colWidth": Array [],
        "rowCount": 0,
        "variant": "compact",
      }
    }
    variant="table"
  />
</div>
`;
